test/fail/Issue1129.agda

postulate
  F : (Set → Set) → Set

syntax F (λ x → y) = [ x ] y

X : Set
X = [ ? ] x
